--- a/index.html
+++ b/index.html
@@ -8,25 +8,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Phoenix Mortgage & Finance</title>
 	<link rel="stylesheet" type="text/css" href="./bootstrap-4.3.1-dist/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="jquery-3.4.1.js"></script>
 	<script type="text/javascript" src="./bootstrap-4.3.1-dist/js/bootstrap.js"></script>
 	<style>
-		html, body {
-			height: 100%;
-			width: 100%;
-			font-family: "Poppins", sans-serif;
-			color: #222;
-		}
-		.navbar {
-			padding: .8rem;
-			
-		}
-		.navbar-nav li {
-			padding-right: 20px;
-		}
-		.nav-link {
-			font-size: 1.1em; !important;
-		}
+
 	</style>
 </head>
 
@@ -57,6 +43,7 @@
 		</div>
 	</div>
 </nav>
+
 <div id="slides" class="carousel slide" data-ride="carousel">
 	<ul class="carousel-indicators">
 		<li data-target="#slides" data-slide-to="0" class="active"></li>
